Store github username to DB

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,7 @@
     <title>Getting Started: Saving Web Content</title>
 </head>
 <body>
-<p th:text="'Title: ' + ${title} + '!'"/>
+<p th:text="'Hello: ' + ${username} + '!'"/>
+<p th:text="${message}"/>
 </body>
 </html>
