Create problems page
- https://www.thymeleaf.org/doc/tutorials/3.0/usingthymeleaf.html#using-theach

--- a/webapp/src/main/resources/templates/index.html
+++ b/webapp/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
     <title>Getting Started: Saving Web Content</title>
 </head>
 <body>
-<p th:text="'Hello: ' + ${username} + '!'"/>
-<p th:text="${message}"/>
+<p th:text="'ようこそ、' + ${username} + 'さん!'"/>
+<p>問題のリストが<a href="/problems">問題一覧のページ</a>で見られますよ。</p>
 </body>
 </html>
