--- a/webapp/src/main/resources/templates/submission.html
+++ b/webapp/src/main/resources/templates/submission.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8" http-equiv="Content-Type" content="text/html"/>
+    <title th:text="'提出 #' + ${submission.id}"></title>
 </head>
 <body>
 <table>
