Add submissions page

--- a/webapp/src/main/resources/templates/index.html
+++ b/webapp/src/main/resources/templates/index.html
@@ -2,10 +2,11 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8" http-equiv="Content-Type" content="text/html"/>
-    <title>Getting Started: Saving Web Content</title>
+    <title>撃墜オンラインジャッジ</title>
 </head>
 <body>
 <p th:text="'ようこそ、' + ${username} + 'さん!'"/>
 <p>問題のリストが<a href="/problems">問題一覧のページ</a>で見られますよ。</p>
+<p><a href="/submissions">提出一覧のページ</a>では、今までにあった提出を見ることができます。</p>
 </body>
 </html>
