Return proper status code on error #3
https://www.baeldung.com/spring-mvc-controller-custom-http-status-code

--- a/webapp/src/main/resources/templates/error.html
+++ b/webapp/src/main/resources/templates/error.html
@@ -9,7 +9,8 @@
 
 <ul>
     <li>GitHubアカウントでログインしていない</li>
-    <li>URLが間違っている（URLを直打ちした場合、404の代わりに500を返しているところがあります。そのうち直します）</li>
+    <li>URLが間違っている</li>
+    <li>提出したテストケースのサイズが大きすぎる</li>
 </ul>
 
 などです。
