--- a/webapp/src/main/resources/templates/problem.html
+++ b/webapp/src/main/resources/templates/problem.html
@@ -1,25 +1,24 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8" http-equiv="Content-Type" content="text/html"/>
-    <title th:text="${problem.title}"></title>
-</head>
-<body>
-<div id="problem-statement"></div>
-<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-<script th:inline="javascript">
-    document.getElementById('problem-statement').innerHTML
-        = marked([[${problem.statement}]])
-</script>
-<hr/>
-<form th:action="@{/api/submit}" method="post">
-    <input type="hidden" name="problemName" th:value="${problem.name}" />
-    <div>
-        <label for="testcase">テストケース</label>
-        <textarea name="testcase" id="testcase"></textarea>
-    </div>
-    <button type="submit">Submit</button>
-</form>
+<head th:replace="base :: common_header(${problem.title})"></head>
+<body th:insert="base :: body(content=~{:: .content}, scripts=~{:: script})">
+<div class="content container">
+    <div id="problem-statement"></div>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <script th:inline="javascript">
+        document.getElementById('problem-statement').innerHTML
+            = marked([[${problem.statement}]])
+    </script>
+    <hr/>
+    <form th:action="@{/api/submit}" method="post">
+        <input type="hidden" name="problemName" th:value="${problem.name}"/>
+        <div class="form-group">
+            <label for="testcase">テストケース</label>
+            <textarea class="form-control" name="testcase" id="testcase"></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+</div>
 <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
 <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 </body>
