--- a/webapp/src/main/resources/templates/index.html
+++ b/webapp/src/main/resources/templates/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8" http-equiv="Content-Type" content="text/html"/>
-    <title>撃墜オンラインジャッジ</title>
-</head>
-<body>
-<p th:text="'ようこそ、' + ${username} + 'さん!'"/>
-<p>問題のリストが<a href="/problems">問題一覧のページ</a>で見られますよ。</p>
-<p><a href="/submissions">提出一覧のページ</a>では、今までにあった提出を見ることができます。</p>
+<head th:insert="base :: common_header('撃墜オンラインジャッジ')"></head>
+<body th:insert="base :: body(~{ :: .content})">
+<div class="content container">
+    <h2>撃墜オンラインジャッジ</h2>
+    <p th:text="'ようこそ、' + ${username} + 'さん!'"/>
+    <p>問題のリストが<a href="/problems">問題一覧のページ</a>で見られますよ。</p>
+    <p><a href="/submissions">提出一覧のページ</a>では、今までにあった提出を見ることができます。</p>
+</div>
 </body>
 </html>
