--- a/webapp/src/main/resources/templates/base.html
+++ b/webapp/src/main/resources/templates/base.html
@@ -5,6 +5,10 @@
     <title th:text="${title}"></title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="/static/style.css">
+    <th:block th:if="${links}">
+        <th:block th:replace="${links}" />
+    </th:block>
 </head>
 <body th:fragment="body(content)">
 <nav class="navbar navbar-expand-lg navbar-light bg-light mb-2">
