Add login/logout link to navbar
- https://getbootstrap.com/docs/4.4/components/navbar/

--- a/webapp/src/main/resources/templates/base.html
+++ b/webapp/src/main/resources/templates/base.html
@@ -13,14 +13,30 @@
 <body th:fragment="body(content)">
 <nav class="navbar navbar-expand-lg navbar-light bg-light mb-2">
     <a class="navbar-brand" href="/">GOJ</a>
-    <div class="collapse navbar-collapse">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expand="false">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
+            <li class="nav-item">
                 <a class="nav-link" href="/problems">問題一覧</a>
             </li>
-            <li class="nav-item active">
+            <li class="nav-item">
                 <a class="nav-link" href="/submissions">提出一覧</a>
             </li>
+        </ul>
+        <ul class="navbar-nav">
+            <li class="nav-item" th:unless="${username}">
+                <a class="nav-link" href="/login">ログイン</a>
+            </li>
+            <th:block th:if="${username}">
+                <li class="nav-item">
+                    <span class="navbar-text">[[${username}]]</span>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/logout">(ログアウト)</a>
+                </li>
+            </th:block>
         </ul>
     </div>
 </nav>
