Create admin page #7
- https://docs.spring.io/spring-security/site/docs/5.0.7.RELEASE/reference/html/oauth2login-advanced.html#oauth2login-advanced-map-authorities
- [It seems we cannot get list properties from yaml without `ConfigurationProperties`](https://stackoverflow.com/questions/26699385/spring-boot-yaml-configuration-for-a-list-of-strings/26700938)
- http://forum.thymeleaf.org/Relative-th-include-paths-td4028161.html

--- a/webapp/src/main/resources/templates/error.html
+++ b/webapp/src/main/resources/templates/error.html
@@ -11,6 +11,7 @@
     <li>GitHubアカウントでログインしていない</li>
     <li>URLが間違っている</li>
     <li>提出したテストケースのサイズが大きすぎる</li>
+    <li>権限がないページにアクセスしようとしている</li>
 </ul>
 
 などです。
