Create create/update problem page #14
- Path variables in Thymeleaf: https://www.thymeleaf.org/doc/tutorials/3.0/usingthymeleaf.html#setting-more-than-one-value-at-a-time
- unique constraints in JPA: https://access.redhat.com/documentation/en-us/red_hat_jboss_web_server/1.0/html/hibernate_annotations_reference_guide/entity-mapping#entity-mapping-entity

--- a/webapp/src/main/resources/templates/admin/admin_index.html
+++ b/webapp/src/main/resources/templates/admin/admin_index.html
@@ -4,6 +4,10 @@
 <body th:insert="base :: body(~{ :: .content})">
 <div class="content container">
     <h2>管理者ページ</h2>
+    <ul>
+        <li><a th:href="@{/admin/problems}">問題一覧</a></li>
+        <li><a th:href="@{/admin/create_problem}">問題追加</a></li>
+    </ul>
 </div>
 </body>
 </html>
