--- a/webapp/src/main/resources/templates/admin/problem_form.html
+++ b/webapp/src/main/resources/templates/admin/problem_form.html
@@ -15,6 +15,12 @@
             <input class="form-control" type="text" name="title" id="problem-title" th:value="${problem} ? ${problem.title}"/>
         </div>
         <div class="form-group">
+            <label for="problem-visibility">公開範囲</label>
+            <select name="visibility" id="problem-visibility">
+                <option th:each="option : ${visibilityOptions}" th:value="${option}" th:text="${option}" th:selected="${problem} and ${option} == ${problem.visibility}"></option>
+            </select>
+        </div>
+        <div class="form-group">
             <label for="problem-statement">問題文</label>
             <textarea class="form-control" name="statement" id="problem-statement" th:text="${problem} ? ${problem.statement}" rows="15">
             </textarea>
