--- a/webapp/src/main/resources/templates/admin/problem_form.html
+++ b/webapp/src/main/resources/templates/admin/problem_form.html
@@ -6,7 +6,7 @@
     <h2>問題投稿・更新ページ</h2>
     <form th:if="${username}" th:action="@{/admin/api/create_or_update_problem}" method="post">
         <input type="hidden" name="id" th:value="${problem} ? ${problem.id}"/>
-        <div class="form=group">
+        <div class="form-group">
             <label for="name">問題名</label>
             <input class="form-control" type="text" name="name" id="name" th:value="${problem} ? ${problem.name}" th:readonly="${problem}"/>
         </div>
