Add link to rejudge page #16

--- a/webapp/src/main/resources/templates/admin/admin_index.html
+++ b/webapp/src/main/resources/templates/admin/admin_index.html
@@ -7,6 +7,7 @@
     <ul>
         <li><a th:href="@{/admin/problems}">問題一覧</a></li>
         <li><a th:href="@{/admin/create_problem}">問題追加</a></li>
+        <li><a th:href="@{/admin/rejudge}">リジャッジ</a></li>
     </ul>
 </div>
 </body>
