--- a/webapp/src/main/resources/templates/contest/contest_index.html
+++ b/webapp/src/main/resources/templates/contest/contest_index.html
@@ -3,6 +3,11 @@
 <head th:replace="base :: common_header(title=${contest.title}, links=~{:: link})"></head>
 <body th:insert="base :: body(content=~{:: .content}, scripts=~{:: script})">
 <div class="content container">
+    <ul class="nav nav-tabs mb-4">
+        <li class="nav-item">
+            <a class="nav-link active" th:href="@{/contest/{name}(name=${contest.name})}">トップ</a>
+        </li>
+    </ul>
     <h2 class="mb-4">[[${contest.title}]]</h2>
     <p th:unless="${username}">コンテストに参加するためには<a th:href="@{/login}">ログイン</a>してください。</p>
 </div>
