--- a/webapp/src/main/resources/templates/contest/contest_index.html
+++ b/webapp/src/main/resources/templates/contest/contest_index.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="base :: common_header(title=${contest.title}, links=~{:: link})"></head>
-<body th:insert="base :: body(content=~{:: .content}, scripts=~{:: script})">
-<div class="content container">
-    <ul class="nav nav-tabs mb-4">
-        <li class="nav-item">
-            <a class="nav-link active" th:href="@{/contest/{name}(name=${contest.name})}">トップ</a>
-        </li>
-    </ul>
-    <h2 class="mb-4">[[${contest.title}]]</h2>
-    <p th:unless="${username}">コンテストに参加するためには<a th:href="@{/login}">ログイン</a>してください。</p>
-</div>
+<body>
+<script th:inline="javascript">
+    const contest = [[${contest}]];
+</script>
+<div id="react"></div>
+<script src="/static/built/bundle.js"></script>
 </body>
 </html>
