Create contest submission tab #10
- Writing tests with MockMvc: https://docs.spring.io/spring/docs/5.2.4.RELEASE/spring-framework-reference/testing.html#spring-mvc-test-server

--- a/webapp/src/main/resources/templates/contest/contest_index.html
+++ b/webapp/src/main/resources/templates/contest/contest_index.html
@@ -4,6 +4,7 @@
 <body>
 <script th:inline="javascript">
     const contest = [[${contest}]];
+    const username = [[${username}]]
 </script>
 <div id="react"></div>
 <script src="/static/built/bundle.js"></script>
