Stop passing problem data based on contest status #10

--- a/webapp/src/main/resources/templates/contest/contest_index.html
+++ b/webapp/src/main/resources/templates/contest/contest_index.html
@@ -4,7 +4,8 @@
 <body>
 <script th:inline="javascript">
     const contest = [[${contest}]];
-    const username = [[${username}]]
+    const username = [[${username}]];
+    const isParticipated = [[${isParticipated}]];
 </script>
 <div id="react"></div>
 <script src="/static/built/bundle.js"></script>
